[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video_tools"]

[project]
name = "video_tools"
requires-python = ">= 3.8"
version = "1.1.1"
authors = [
	{name = "Sebastien Gemme", email = "sgemme7@gmail.com"},
]
maintainers = [
	{name = "Sebastien Gemme", email = "sgemme7@gmail.com"},
]
dependencies = [
	"python-ffmpeg",
]

[project.scripts]
video-transcode = "video_tools.video_transcode:main"
